<resources>
    <string name="app_name">Login page</string>
    <string name="login">Existing</string>
    <string name="Register">New User</string>
    <string name="signup">Sign up</string>
    <string name="loginUser">Login</string>
    <string name="usernameHint"><font size="16">Username</font></string>
    <string name="passwordHint"><font size="16">Password</font></string>
    <string name="confirmPasswordHint"><font size="16">Confirm Password</font></string>
    <string name="emailHint"><font size="16">Email</font></string>
    <string name="searchHint"><font size="13">Search Users Here</font></string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="OR">OR</string>
    <string name="welcomeQuote">Welcome Mirza Hassan</string>
    <string name="itemPrice">Item Price</string>
    <string name="today">Today</string>
</resources>