<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:switch="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    android:backgroundTint="@color/background"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="235dp"
        android:layout_height="199dp"
        android:layout_marginTop="96dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/facebook" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="261dp"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:background="@drawable/round"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:text="@string/login"
                android:textColor="#ED2196F3"
                android:background="@drawable/box_input"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                tools:ignore="TouchTargetSizeCheck"
                android:background="@drawable/btnback"
                android:textColor="@color/white"


                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="337dp"
        android:layout_height="257dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_auth"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/userNameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#070707"
            android:drawableRight="@drawable/user"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:inputType="text"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:drawableRight="@drawable/email"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0B0A0A"
            android:drawableRight="@drawable/password"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="text|textPassword" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#070707"
            android:drawableRight="@drawable/password"
            android:ems="10"
            android:hint="@string/confirmPasswordHint"
            android:inputType="text|textPassword" />

    </LinearLayout>

    <Button

        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/signup"
        android:textColorHighlight="#ED2196F3"
        android:textColorLink="#ED2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@drawable/btnback"
        android:textColor="@color/white"
        app:rippleColor="#ED2196F3" />

</androidx.constraintlayout.widget.ConstraintLayout>